parser/antlr4/mysql_parser.go
// Code generated from /Users/mickey/git/MySQLParser-go/parser/antlr4/MySQL.g4 by ANTLR 4.9.2. DO NOT EDIT.

package antlr4 // MySQL
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var literalNames = []string{
	"", "'!'", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
	"", "", "", "", "", "", "", "", "", "", "", "", "", "'+'", "'-'", "'|'", 
	"'&'", "'<<'", "'>>'", "'*'", "'^'", "", "", "", "", "", "'regexp'", "'~'", 
	"'escape'", "')'", "'('", "']'", "'['", "':'", "'.*'", "'='", "'<'", "'>'", 
	"'!='", "'<='", "'>='", "';'", "','", "'.'", "'collate'", "'index'", "'key'", 
	"'use'", "'ignore'", "'partition'", "'straight_join'", "'natural'", "'oj'",
}
var symbolicNames = []string{
	"", "", "PLACEHOLDER", "SELECT", "INSERT", "INTO", "VALUES", "DELETE", 
	"FROM", "WHERE", "LIMIT", "NULL", "IS", "IN", "BETWEEN", "EXISTS", "TRUE", 
	"FALSE", "XOR", "DEFAULT", "UPDATE", "SET", "ORDER", "GROUP", "BY", "FOR", 
	"LIKE", "HAVING", "AS", "INNER", "OUTER", "JOIN", "LEFT", "RIGHT", "ON", 
	"DISTINCT", "OFFSET", "ASC", "DESC", "CROSS", "USING", "DATE", "TIME", 
	"TIMESTAMP", "ALL", "ANY", "SOME", "UNION", "UNKNOWN", "LOCK", "SHARE", 
	"MODE", "COMMIT", "ROLLBACK", "CASE", "WHEN", "THEN", "ELSE", "END", "ROW", 
	"BINARY", "AND", "OR", "NOT", "DIV", "MOD", "PLUS", "MINUS", "VERTBAR", 
	"BITAND", "SHIFT_LEFT", "SHIFT_RIGHT", "ASTERISK", "POWER_OP", "INT", "DECIMAL", 
	"STRING", "ID", "COLUMN_REL", "REGEXP", "NEGATION", "ESCAPE", "RPAREN", 
	"LPAREN", "RBRACK", "LBRACK", "COLON", "ALL_FIELDS", "EQ", "LTH", "GTH", 
	"NOT_EQ", "LET", "GET", "SEMI", "COMMA", "DOT", "COLLATE", "INDEX", "KEY", 
	"USE", "IGNORE", "PARTITION", "STRAIGHT_JOIN", "NATURAL", "OJ", "NEWLINE", 
	"WS", "COMMENT1", "COMMENT2", "USER_VAR",
}

var ruleNames = []string{
	"stat", "transcationStat", "commit", "rollback", "insertStat", "columnNames", 
	"valueList", "selectStat", "selectInner", "selectPrefix", "selectSuffix", 
	"selectUnionSuffix", "selectExprs", "tables", "tableRel", "tableFactor", 
	"tableSubQuery", "tableRecu", "tableJoin", "tableJoinSuffix", "tableJoinMod", 
	"joinCondition", "gbobExprs", "updateStat", "updateSingleTable", "updateMultipleTable", 
	"setExprs", "setExpr", "deleteStat", "tableNameAndAlias", "tableNameAndAliases", 
	"whereCondition", "whereCondSub", "whereCondOp", "expression", "exprRelational", 
	"exprBetweenAnd", "exprIsOrIsNotNull", "exprInSelect", "exprInValues", 
	"exprExists", "exprNot", "exprLike", "element", "elementOpFactory", "elementText", 
	"elementTextParam", "elementDate", "elementSubQuery", "elementWapperBkt", 
	"elementListFactor", "elementList", "elementOpEle", "elementOpEleSuffix", 
	"elementCase", "caseWhenPart", "elementWithPrefix", "elementRow", "funCall", 
	"paramList",
}
type MySQLParser struct {
	*antlr.BaseParser
}

// NewMySQLParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *MySQLParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewMySQLParser(input antlr.TokenStream) *MySQLParser {
	this := new(MySQLParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "MySQL.g4"

	return this
}


// MySQLParser tokens.
const (
	MySQLParserEOF = antlr.TokenEOF
	MySQLParserT__0 = 1
	MySQLParserPLACEHOLDER = 2
	MySQLParserSELECT = 3
	MySQLParserINSERT = 4
	MySQLParserINTO = 5
	MySQLParserVALUES = 6
	MySQLParserDELETE = 7
	MySQLParserFROM = 8
	MySQLParserWHERE = 9
	MySQLParserLIMIT = 10
	MySQLParserNULL = 11
	MySQLParserIS = 12
	MySQLParserIN = 13
	MySQLParserBETWEEN = 14
	MySQLParserEXISTS = 15
	MySQLParserTRUE = 16
	MySQLParserFALSE = 17
	MySQLParserXOR = 18
	MySQLParserDEFAULT = 19
	MySQLParserUPDATE = 20
	MySQLParserSET = 21
	MySQLParserORDER = 22
	MySQLParserGROUP = 23
	MySQLParserBY = 24
	MySQLParserFOR = 25
	MySQLParserLIKE = 26
	MySQLParserHAVING = 27
	MySQLParserAS = 28
	MySQLParserINNER = 29
	MySQLParserOUTER = 30
	MySQLParserJOIN = 31
	MySQLParserLEFT = 32
	MySQLParserRIGHT = 33
	MySQLParserON = 34
	MySQLParserDISTINCT = 35
	MySQLParserOFFSET = 36
	MySQLParserASC = 37
	MySQLParserDESC = 38
	MySQLParserCROSS = 39
	MySQLParserUSING = 40
	MySQLParserDATE = 41
	MySQLParserTIME = 42
	MySQLParserTIMESTAMP = 43
	MySQLParserALL = 44
	MySQLParserANY = 45
	MySQLParserSOME = 46
	MySQLParserUNION = 47
	MySQLParserUNKNOWN = 48
	MySQLParserLOCK = 49
	MySQLParserSHARE = 50
	MySQLParserMODE = 51
	MySQLParserCOMMIT = 52
	MySQLParserROLLBACK = 53
	MySQLParserCASE = 54
	MySQLParserWHEN = 55
	MySQLParserTHEN = 56
	MySQLParserELSE = 57
	MySQLParserEND = 58
	MySQLParserROW = 59
	MySQLParserBINARY = 60
	MySQLParserAND = 61
	MySQLParserOR = 62
	MySQLParserNOT = 63
	MySQLParserDIV = 64
	MySQLParserMOD = 65
	MySQLParserPLUS = 66
	MySQLParserMINUS = 67
	MySQLParserVERTBAR = 68
	MySQLParserBITAND = 69
	MySQLParserSHIFT_LEFT = 70
	MySQLParserSHIFT_RIGHT = 71
	MySQLParserASTERISK = 72
	MySQLParserPOWER_OP = 73
	MySQLParserINT = 74
	MySQLParserDECIMAL = 75
	MySQLParserSTRING = 76
	MySQLParserID = 77
	MySQLParserCOLUMN_REL = 78
	MySQLParserREGEXP = 79
	MySQLParserNEGATION = 80
	MySQLParserESCAPE = 81
	MySQLParserRPAREN = 82
	MySQLParserLPAREN = 83
	MySQLParserRBRACK = 84
	MySQLParserLBRACK = 85
	MySQLParserCOLON = 86
	MySQLParserALL_FIELDS = 87
	MySQLParserEQ = 88
	MySQLParserLTH = 89
	MySQLParserGTH = 90
	MySQLParserNOT_EQ = 91
	MySQLParserLET = 92
	MySQLParserGET = 93
	MySQLParserSEMI = 94
	MySQLParserCOMMA = 95
	MySQLParserDOT = 96
	MySQLParserCOLLATE = 97
	MySQLParserINDEX = 98
	MySQLParserKEY = 99
	MySQLParserUSE = 100
	MySQLParserIGNORE = 101
	MySQLParserPARTITION = 102
	MySQLParserSTRAIGHT_JOIN = 103
	MySQLParserNATURAL = 104
	MySQLParserOJ = 105
	MySQLParserNEWLINE = 106
	MySQLParserWS = 107
	MySQLParserCOMMENT1 = 108
	MySQLParserCOMMENT2 = 109
	MySQLParserUSER_VAR = 110
)

// MySQLParser rules.
const (
	MySQLParserRULE_stat = 0
	MySQLParserRULE_transcationStat = 1
	MySQLParserRULE_commit = 2
	MySQLParserRULE_rollback = 3
	MySQLParserRULE_insertStat = 4
	MySQLParserRULE_columnNames = 5
	MySQLParserRULE_valueList = 6
	MySQLParserRULE_selectStat = 7
	MySQLParserRULE_selectInner = 8
	MySQLParserRULE_selectPrefix = 9
	MySQLParserRULE_selectSuffix = 10
	MySQLParserRULE_selectUnionSuffix = 11
	MySQLParserRULE_selectExprs = 12
	MySQLParserRULE_tables = 13
	MySQLParserRULE_tableRel = 14
	MySQLParserRULE_tableFactor = 15
	MySQLParserRULE_tableSubQuery = 16
	MySQLParserRULE_tableRecu = 17
	MySQLParserRULE_tableJoin = 18
	MySQLParserRULE_tableJoinSuffix = 19
	MySQLParserRULE_tableJoinMod = 20
	MySQLParserRULE_joinCondition = 21
	MySQLParserRULE_gbobExprs = 22
	MySQLParserRULE_updateStat = 23
	MySQLParserRULE_updateSingleTable = 24
	MySQLParserRULE_updateMultipleTable = 25
	MySQLParserRULE_setExprs = 26
	MySQLParserRULE_setExpr = 27
	MySQLParserRULE_deleteStat = 28
	MySQLParserRULE_tableNameAndAlias = 29
	MySQLParserRULE_tableNameAndAliases = 30
	MySQLParserRULE_whereCondition = 31
	MySQLParserRULE_whereCondSub = 32
	MySQLParserRULE_whereCondOp = 33
	MySQLParserRULE_expression = 34
	MySQLParserRULE_exprRelational = 35
	MySQLParserRULE_exprBetweenAnd = 36
	MySQLParserRULE_exprIsOrIsNotNull = 37
	MySQLParserRULE_exprInSelect = 38
	MySQLParserRULE_exprInValues = 39
	MySQLParserRULE_exprExists = 40
	MySQLParserRULE_exprNot = 41
	MySQLParserRULE_exprLike = 42
	MySQLParserRULE_element = 43
	MySQLParserRULE_elementOpFactory = 44
	MySQLParserRULE_elementText = 45
	MySQLParserRULE_elementTextParam = 46
	MySQLParserRULE_elementDate = 47
	MySQLParserRULE_elementSubQuery = 48
	MySQLParserRULE_elementWapperBkt = 49
	MySQLParserRULE_elementListFactor = 50
	MySQLParserRULE_elementList = 51
	MySQLParserRULE_elementOpEle = 52
	MySQLParserRULE_elementOpEleSuffix = 53
	MySQLParserRULE_elementCase = 54
	MySQLParserRULE_caseWhenPart = 55
	MySQLParserRULE_elementWithPrefix = 56
	MySQLParserRULE_elementRow = 57
	MySQLParserRULE_funCall = 58
	MySQLParserRULE_paramList = 59
)

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MySQLParserRULE_stat
	return p
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) InsertStat() IInsertStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInsertStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInsertStatContext)
}

func (s *StatContext) UpdateStat() IUpdateStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUpdateStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUpdateStatContext)
}

func (s *StatContext) DeleteStat() IDeleteStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeleteStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeleteStatContext)
}

func (s *StatContext) SelectStat() ISelectStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectStatContext)
}

func (s *StatContext) TranscationStat() ITranscationStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITranscationStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITranscationStatContext)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *StatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLListener); ok {
		listenerT.EnterStat(s)
	}
}

func (s *StatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLListener); ok {
		listenerT.ExitStat(s)
	}
}




func (p *MySQLParser) Stat() (localctx IStatContext) {
	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MySQLParserRULE_stat)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(125)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MySQLParserINSERT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(120)
			p.InsertStat()
		}


	case MySQLParserUPDATE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(121)
			p.UpdateStat()
		}


	case MySQLParserDELETE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(122)
			p.DeleteStat()
		}


	case MySQLParserSELECT, MySQLParserLPAREN:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(123)
			p.SelectStat()
		}


	case MySQLParserCOMMIT, MySQLParserROLLBACK:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(124)
			p.TranscationStat()
		}



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// ITranscationStatContext is an interface to support dynamic dispatch.
type ITranscationStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTranscationStatContext differentiates from other interfaces.
	IsTranscationStatContext()
}

type TranscationStatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTranscationStatContext() *TranscationStatContext {
	var p = new(TranscationStatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MySQLParserRULE_transcationStat
	return p
}

func (*TranscationStatContext) IsTranscationStatContext() {}

func NewTranscationStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TranscationStatContext {
	var p = new(TranscationStatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLParserRULE_transcationStat

	return p
}

func (s *TranscationStatContext) GetParser() antlr.Parser { return s.parser }

func (s *TranscationStatContext) Commit() ICommitContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICommitContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICommitContext)
}

func (s *TranscationStatContext) Rollback() IRollbackContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRollbackContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRollbackContext)
}

func (s *TranscationStatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TranscationStatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TranscationStatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLListener); ok {
		listenerT.EnterTranscationStat(s)
	}
}

func (s *TranscationStatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLListener); ok {
		listenerT.ExitTranscationStat(s)
	}
}




func (p *MySQLParser) TranscationStat() (localctx ITranscationStatContext) {
	localctx = NewTranscationStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MySQLParserRULE_transcationStat)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(129)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MySQLParserCOMMIT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(127)
			p.Commit()
		}


	case MySQLParserROLLBACK:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(128)
			p.Rollback()
		}



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// ICommitContext is an interface to support dynamic dispatch.
type ICommitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCommitContext differentiates from other interfaces.
	IsCommitContext()
}

type CommitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommitContext() *CommitContext {
	var p = new(CommitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MySQLParserRULE_commit
	return p
}

func (*CommitContext) IsCommitContext() {}

func NewCommitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommitContext {
	var p = new(CommitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLParserRULE_commit

	return p
}

func (s *CommitContext) GetParser() antlr.Parser { return s.parser }

func (s *CommitContext) COMMIT() antlr.TerminalNode {
	return s.GetToken(MySQLParserCOMMIT, 0)
}

func (s *CommitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *CommitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLListener); ok {
		listenerT.EnterCommit(s)
	}
}
